--- a/index.html
+++ b/index.html
@@ -421,17 +421,17 @@ button:focus{
   <div class="container">
     <!-- Top Navigation -->
     <div class="codrops-top clearfix">
-      <a class="codrops-icon codrops-icon-prev" href="http://tympanus.net/Development/CreativeLinkEffects/"><span>Previous You Tube</span></a>
-      <span class="right"><a class="codrops-icon codrops-icon-drop" href="http://tympanus.net/codrops/?p=16114"><span>Quick You Tube</span></a></span>
+     <a class="codrops-icon codrops-icon-prev" href=https://youtube.com/c/GYANIBHAIYAYT"><span>Previous You Tube</span></a>
+      <span class="right"><a class="codrops-icon codrops-icon-drop" href="https://youtube.com/channel/UCpF6Ccyg_eTT1FDL3_YTQbQ"><span>Quick You Tube</span></a></span>
     </div>
 
     <header>
       <h1>V-Logger <span>Build Beautifull Videos of Different historical
        places<br><p>Our Channles</p></span></h1>
       <nav class="codrops-demos">
-        <a href="index.html">Gyani Bhiya</a>
-        <a class="current-demo" href="index2.html">Home</a>
-        <a href="interactivedemo/index.html">Vlogger Bhiya</a>
+       <a href="https://youtube.com/c/GYANIBHAIYAYT">Gyani Bhiya</a>
+        <a class="current-demo" href="index.html">Home</a>
+        <a href="https://instagram.com/raisahabb?utm_medium=copy_linkl">Vlogger Bhiya</a>
       </nav>
     </header>
     <div class="component">
@@ -440,13 +440,13 @@ button:focus{
       <button class="cn-button" id="cn-button">Menu</button>
       <div class="cn-wrapper" id="cn-wrapper">
         <ul>
-          <li><a href="#"><span>Home</span></a></li>
-          <li><a href="#"><span>Gallary</span></a></li>
-          <li><a href="#"><span>Support</span></a></li>
-          <li><a href="#"><span>You Tube</span></a></li>
-          <li><a href="#"><span>Map</span></a></li>
-          <li><a href="#"><span>Contact</span></a></li>
-          <li><a href="#"><span>Follow</span></a></li>
+         <li><a href="index.html"><span>Home</span></a></li>
+          <li><a href="gallary.html"><span>Gallary</span></a></li>
+          <li><a href="social.html"><span>Support</span></a></li>
+          <li><a href="https://youtube.com/c/GYANIBHAIYAYT"><span>You Tube</span></a></li>
+          <li><a href="map.html"><span>Map</span></a></li>
+          <li><a href="https://instagram.com/raisahabb?utm_medium=copy_link"><span>Contact</span></a></li>
+          <li><a href="https://instagram.com/raisahabb?utm_medium=copy_link"><span>Instagram</span></a></li
          </ul>
       </div>
       <!-- End of Nav Structure -->
