--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Circular Navigation - Demo 2 | Codrops</title>
+  <title>V  logger</title>
   <meta name="description" content="Circular Navigation Styles - Building a Circular Navigation with CSS Transforms | Codrops " />
   <meta name="keywords" content="css transforms, circular navigation, round navigation, circular menu, tutorial" />
   <meta name="author" content="Sara Soueidan for Codrops" />
