--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@ button:focus{
       <nav class="codrops-demos">
         <a href="https://youtube.com/c/GYANIBHAIYAYT">Gyani Bhiya</a>
         <a class="current-demo" href="index.html">Home</a>
-        <a href="https://instagram.com/raisahabb?utm_medium=copy_linkl">Vlogger Bhiya</a>
+        <a href="https://youtube.com/channel/UCpF6Ccyg_eTT1FDL3_YTQbQ">Vlogger Bhiya</a>
       </nav>
     </header>
     <div class="component">
